--- a/example/1.neo4j.ipynb
+++ b/example/1.neo4j.ipynb
@@ -1,10 +1,184 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import HTML \n",
+    "import os"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining InfluxDB version and local path"
+    "## Defining Neo4j version and local path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: NEO4J_VERSION=neo4j-community-3.5.7\n",
+      "env: NEO4J_PATH=neo4j-community-3.5.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env NEO4J_VERSION neo4j-community-3.5.7\n",
+    "%env NEO4J_PATH    neo4j-community-3.5.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading and extracting Neo4j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tar: neo4j-community-3.5.7.tar.gz: Cannot open: No such file or directory\n",
+      "tar: Error is not recoverable: exiting now\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !wget https://neo4j.com/artifact.php?name=${NEO4J_VERSION}-unix.tar.gz -q --show-progress\n",
+    "# !mv artifact.php?name=${NEO4J_VERSION}-unix.tar.gz ${NEO4J_VERSION}.tar.gz\n",
+    "!tar -xvf ${NEO4J_VERSION}.tar.gz >/dev/null \n",
+    "# !rm       ${NEO4J_VERSION}.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start Neo4j server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: NEO4J_dbms_connectors_default__advertised__address=blablabla\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env NEO4J_dbms_connectors_default__advertised__address blablabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active database: graph.db\n",
+      "Directories in use:\n",
+      "  home:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7\n",
+      "  config:       /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/conf\n",
+      "  logs:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/logs\n",
+      "  plugins:      /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/plugins\n",
+      "  import:       /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/import\n",
+      "  data:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/data\n",
+      "  certificates: /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/certificates\n",
+      "  run:          /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/run\n",
+      "Starting Neo4j.\n",
+      "Started neo4j (pid 102). It is available at http://localhost:7474/\n",
+      "There may be a short delay until the server is ready.\n",
+      "See /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/logs/neo4j.log for current status.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./${NEO4J_PATH}/bin/neo4j start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: SERVER_URL=hub.gke.mybinder.org\n",
+      "env: SERVER_URL=0.0.0.0:8888\n",
+      "env: JUPYTERHUB_SERVICE_PREFIX=\n",
+      "env: PROXY_SUBURL=/proxy/7474/browser/\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env SERVER_URL   hub.gke.mybinder.org\n",
+    "%env SERVER_URL   0.0.0.0:8888\n",
+    "%env JUPYTERHUB_SERVICE_PREFIX \n",
+    "%env PROXY_SUBURL  /proxy/7474/browser/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Neo4j will be available at: <a href=\"http://0.0.0.0:8888/proxy/7474/browser/\" target=\"_blank\">http://0.0.0.0:8888/proxy/7474/browser/</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "html = 'Neo4j will be available at: <a href=\"http://{0}{1}{2}\" target=\"_blank\">http://{0}{1}{2}</a>'\n",
+    "display(HTML(html.format(os.environ['SERVER_URL'],os.environ['JUPYTERHUB_SERVICE_PREFIX'],os.environ['PROXY_SUBURL'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curl: (7) Failed to connect to localhost port 7474: Connection refused\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl http://localhost:7474/"
    ]
   },
   {
@@ -12,127 +186,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%env INFLUXDB_VERSION 1.7.7\n",
-    "%env INFLUXDB_PATH    influxdb-1.7.7-1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Downloading and extracting InfluxDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget https://dl.influxdata.com/influxdb/releases/influxdb-${INFLUXDB_VERSION}_linux_amd64.tar.gz -q --show-progress\n",
-    "!tar -zxf influxdb-${INFLUXDB_VERSION}_linux_amd64.tar.gz >> /dev/null\n",
-    "!rm       influxdb-${INFLUXDB_VERSION}_linux_amd64.tar.gz "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Start InfluxDB server"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Open a terminal and start the influx server by running\n",
-    "```\n",
-    "<influxdb_path>/usr/bin/influxd\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create database for Telegraf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!${INFLUXDB_PATH}/usr/bin/influx -execute \"create database telegraf\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create user for Telegraf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!${INFLUXDB_PATH}/usr/bin/influx -execute \"create user telegraf with password 'telegraf'\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List InfluxDB databases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!${INFLUXDB_PATH}/usr/bin/influx -execute \"show databases\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List users"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!${INFLUXDB_PATH}/usr/bin/influx -execute \"show users\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List InfluxDB [measurements](https://docs.influxdata.com/influxdb/v1.7/concepts/key_concepts/#measurement)\n",
-    "\n",
-    "The measurement acts as a container for tags, fields, and the time column, and the measurement name is the description of the data that are stored in the associated fields. **Measurement names are strings, and, for any SQL users out there, a measurement is conceptually similar to a table**. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!${INFLUXDB_PATH}/usr/bin/influx -execute \"show measurements\" -database 'telegraf'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
