--- a/example/1.neo4j.ipynb
+++ b/example/1.neo4j.ipynb
@@ -45,34 +45,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tar: neo4j-community-3.5.7.tar.gz: Cannot open: No such file or directory\n",
-      "tar: Error is not recoverable: exiting now\n"
-     ]
-    }
-   ],
-   "source": [
-    "# !wget https://neo4j.com/artifact.php?name=${NEO4J_VERSION}-unix.tar.gz -q --show-progress\n",
-    "# !mv artifact.php?name=${NEO4J_VERSION}-unix.tar.gz ${NEO4J_VERSION}.tar.gz\n",
-    "!tar -xvf ${NEO4J_VERSION}.tar.gz >/dev/null \n",
-    "# !rm       ${NEO4J_VERSION}.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Start Neo4j server"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -80,12 +52,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: NEO4J_dbms_connectors_default__advertised__address=blablabla\n"
+      "artifact.php?name=n 100%[===================>] 146.53M  5.50KB/s    in 10s     \n"
      ]
     }
    ],
    "source": [
-    "%env NEO4J_dbms_connectors_default__advertised__address blablabla"
+    "!wget https://neo4j.com/artifact.php?name=${NEO4J_VERSION}-unix.tar.gz -q --show-progress\n",
+    "!mv artifact.php?name=${NEO4J_VERSION}-unix.tar.gz ${NEO4J_VERSION}.tar.gz\n",
+    "!tar -xvf ${NEO4J_VERSION}.tar.gz >/dev/null \n",
+    "!rm       ${NEO4J_VERSION}.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start Neo4j server"
    ]
   },
   {
@@ -99,18 +81,18 @@
      "text": [
       "Active database: graph.db\n",
       "Directories in use:\n",
-      "  home:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7\n",
-      "  config:       /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/conf\n",
-      "  logs:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/logs\n",
-      "  plugins:      /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/plugins\n",
-      "  import:       /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/import\n",
-      "  data:         /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/data\n",
-      "  certificates: /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/certificates\n",
-      "  run:          /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/run\n",
+      "  home:         /home/jovyan/example/neo4j-community-3.5.7\n",
+      "  config:       /home/jovyan/example/neo4j-community-3.5.7/conf\n",
+      "  logs:         /home/jovyan/example/neo4j-community-3.5.7/logs\n",
+      "  plugins:      /home/jovyan/example/neo4j-community-3.5.7/plugins\n",
+      "  import:       /home/jovyan/example/neo4j-community-3.5.7/import\n",
+      "  data:         /home/jovyan/example/neo4j-community-3.5.7/data\n",
+      "  certificates: /home/jovyan/example/neo4j-community-3.5.7/certificates\n",
+      "  run:          /home/jovyan/example/neo4j-community-3.5.7/run\n",
       "Starting Neo4j.\n",
       "Started neo4j (pid 102). It is available at http://localhost:7474/\n",
       "There may be a short delay until the server is ready.\n",
-      "See /home/matheus/local-home/git/github/org.thedatasociety/binderhub-neo4j/example/neo4j-community-3.5.7/logs/neo4j.log for current status.\n"
+      "See /home/jovyan/example/neo4j-community-3.5.7/logs/neo4j.log for current status.\n"
      ]
     }
    ],
@@ -120,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,28 +110,24 @@
      "output_type": "stream",
      "text": [
       "env: SERVER_URL=hub.gke.mybinder.org\n",
-      "env: SERVER_URL=0.0.0.0:8888\n",
-      "env: JUPYTERHUB_SERVICE_PREFIX=\n",
-      "env: PROXY_SUBURL=/proxy/7474/browser/\n"
+      "env: PROXY_SUBURL=proxy/7474/browser/\n"
      ]
     }
    ],
    "source": [
     "%env SERVER_URL   hub.gke.mybinder.org\n",
-    "%env SERVER_URL   0.0.0.0:8888\n",
-    "%env JUPYTERHUB_SERVICE_PREFIX \n",
-    "%env PROXY_SUBURL  /proxy/7474/browser/"
+    "%env PROXY_SUBURL  proxy/7474/browser/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Neo4j will be available at: <a href=\"http://0.0.0.0:8888/proxy/7474/browser/\" target=\"_blank\">http://0.0.0.0:8888/proxy/7474/browser/</a>"
+       "Neo4j will be available at: <a href=\"http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-l0daqc7y/proxy/7474/browser/\" target=\"_blank\">http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-l0daqc7y/proxy/7474/browser/</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
