--- a/example/1.neo4j.ipynb
+++ b/example/1.neo4j.ipynb
@@ -26,14 +26,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: NEO4J_VERSION=neo4j-community-3.5.7\n",
-      "env: NEO4J_PATH=neo4j-community-3.5.7\n"
+      "env: NEO4J_VERSION=neo4j-community-2.3.12\n",
+      "env: NEO4J_PATH=neo4j-community-2.3.12\n"
      ]
     }
    ],
    "source": [
-    "%env NEO4J_VERSION neo4j-community-3.5.7\n",
-    "%env NEO4J_PATH    neo4j-community-3.5.7"
+    "%env NEO4J_VERSION neo4j-community-2.3.12\n",
+    "%env NEO4J_PATH    neo4j-community-2.3.12"
    ]
   },
   {
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artifact.php?name=n 100%[===================>] 146.53M  5.50KB/s    in 10s     \n"
+      "artifact.php?name=n 100%[===================>]  56.02M   935 B/s    in 10s     \n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "!./${NEO4J_PATH}/bin/neo4j start"
+    "!cd ${NEO4J_PATH} && ./bin/neo4j console"
    ]
   },
   {
@@ -127,7 +127,7 @@
     {
      "data": {
       "text/html": [
-       "Neo4j will be available at: <a href=\"http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-l0daqc7y/proxy/7474/browser/\" target=\"_blank\">http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-l0daqc7y/proxy/7474/browser/</a>"
+       "Neo4j will be available at: <a href=\"http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-ra62aay0/proxy/7474/browser/\" target=\"_blank\">http://hub.gke.mybinder.org/user/thedatasociety-binderhub-neo4j-ra62aay0/proxy/7474/browser/</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -144,14 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curl: (7) Failed to connect to localhost port 7474: Connection refused\n"
+      "{\n",
+      "  \"management\" : \"http://localhost:7474/db/manage/\",\n",
+      "  \"data\" : \"http://localhost:7474/db/data/\"\n",
+      "}"
      ]
     }
    ],
